<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.jwitteveen.project4_mathquiz.PickOperationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPickOperation"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:enabled="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/gridLayout"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="0dp"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_symbol"
            android:id="@+id/buttonAddition"
            android:layout_row="0"
            android:layout_column="0"
            android:minWidth="140dp"
            android:minHeight="140dp"
            android:textSize="100sp"
            android:onClick="buttonOnClick"
            android:layout_marginTop="0dp"
            android:enabled="true"
            android:layout_marginRight="5dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction_symbol"
            android:id="@+id/buttonSubtraction"
            android:layout_row="0"
            android:layout_column="1"
            android:minHeight="140dp"
            android:minWidth="140dp"
            android:textSize="100sp"
            android:layout_marginTop="0dp"
            android:onClick="buttonOnClick"
            android:enabled="true"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication_symbol"
            android:id="@+id/buttonMultiplication"
            android:layout_row="1"
            android:layout_column="0"
            android:minWidth="140dp"
            android:minHeight="140dp"
            android:textSize="100sp"
            android:onClick="buttonOnClick"
            android:enabled="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_symbol"
            android:id="@+id/buttonDivision"
            android:layout_row="1"
            android:layout_column="1"
            android:minHeight="140dp"
            android:minWidth="140dp"
            android:textSize="100sp"
            android:onClick="buttonOnClick"
            android:enabled="true"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp" />
    </GridLayout>

</RelativeLayout>
